--- a/client/main.less
+++ b/client/main.less
@@ -1,3 +1,4 @@
 @import "{}/imports/ui/stylesheets/not-found.less";
 @import "{}/imports/ui/stylesheets/list.less";
 @import "{}/imports/ui/stylesheets/login.less";
+@import "{}/imports/ui/stylesheets/register.less";
