--- a/imports/ui/stylesheets/login.less
+++ b/imports/ui/stylesheets/login.less
@@ -2,6 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
 body {
     position: relative;
     height: 100%;
@@ -9,10 +10,12 @@ body {
     padding: 0;
     margin: 0;
 }
+
 #__blaze-root {
     width: 100%;
     height: 100%;
 }
+
 .contenter {
     position: relative;
     margin: 0 auto;
@@ -20,11 +23,7 @@ body {
     height: 100%;
     padding: 0;
 }
-.right-top {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-}
+
 button, input {
     padding: 6px 12px;
     border-radius: 4px;
@@ -63,8 +62,8 @@ button, input {
     border-color: rgba(250, 223, 154, 0.3);
     border-style: solid;
     z-index: 2;
-    transform: translate(-50%, 0);
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.3);
+    transform: translate(-50%, 0);
 }
 .container:after{
     display: block;
@@ -80,11 +79,16 @@ button, input {
     background: #fceec6 url('img/kiss_light.jpg') no-repeat fixed 50% top;
     background-size: cover;
 }
+
+.mobile-container:before,
+.mobile-container:after{
+    width: 100%;
+}
 .login-wrapper {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 320px;
+    width: 360px;
     height: 440px;
     z-index: 2;
     box-sizing: border-box;
@@ -181,8 +185,8 @@ button, input {
     height: 70px;
     border-radius: 100%;
     animation: sign 1.6s ease infinite alternate;
-    -webkit-transform: translateX(-50%, -50%);
-    transform: translateX(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     border: 2px solid #ce1b2c;
     box-shadow: 0 0 16px 8px rgb(255, 254, 251,.6);
 }
@@ -217,9 +221,11 @@ button, input {
     height: 50px;
     font-size: 16px;
     text-align: center;
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    // background-image: url(//cdn.tinypng.com/images/grass.png);
+}
+.right-top {
+    position: absolute;
+    top: 12px;
+    right: 12px;
 }
 @-webkit-keyframes sign {
     0% {
